Fixed Article and Video <li> on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,8 @@ em {
   h2, dt {
     text-align: center;
   }
-  dl, li, dd {
+  dl, dd, ul, li {
     margin-left: 0;
+    padding-left: 0;
   }
 }
